[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hdutfj", email = "156539429+Hdutfj@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-session>=0.8.0",
    "openai-agents>=0.0.17",
]

[project.scripts]
code = "code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
